[package]
authors = ["Jorge Aparicio <jorge@japaric.io>"]
categories = ["asynchronous", "embedded", "no-std"]
description = "Minimal non-blocking I/O layer"
keywords = ["await", "futures", "IO"]
license = "MIT OR Apache-2.0"
name = "nb"
repository = "https://github.com/japaric/nb"
version = "0.1.1"

[features]
unstable = ["futures-core", "futures-io"]

[dependencies.futures-core]
git = "https://github.com/Nemo157/futures-rs"
branch = "core-io"
optional = true
default-features = false

[dependencies.futures-io]
git = "https://github.com/Nemo157/futures-rs"
branch = "core-io"
optional = true
default-features = false

[dev-dependencies.futures]
git = "https://github.com/Nemo157/futures-rs"
branch = "core-io"
default-features = false
